[gd_scene load_steps=5 format=3 uid="uid://cx87h04vsqr1s"]

[ext_resource type="LabelSettings" uid="uid://t52sogethdwd" path="res://resources/ui/label_settings/title.tres" id="1_1gdud"]
[ext_resource type="Theme" uid="uid://dqqhynmg03neg" path="res://resources/ui/themes/default.tres" id="1_e7q4l"]
[ext_resource type="Script" uid="uid://d4deo3j204638" path="res://scenes/menus/main_menu/main_menu.gd" id="2_gm7d7"]
[ext_resource type="PackedScene" uid="uid://dat7nk77r14m2" path="res://scenes/menus/settings_menu/settings_menu.tscn" id="4_peecx"]

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e7q4l")
script = ExtResource("2_gm7d7")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_right = 600

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Game Title"
label_settings = ExtResource("1_1gdud")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource("4_peecx")]
visible = false
layout_mode = 2

[connection signal="pressed" from="Margin/VBox/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Margin/VBox/Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Margin/VBox/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="visibility_changed" from="SettingsMenu" to="." method="_on_settings_menu_visibility_changed"]
